--- a/work.html
+++ b/work.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.faf00fd3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.bb16690a.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.a2436281.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.2d75cc20.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.263c4a7d.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.e688a0d8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.6f7b5f89.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d123fcbe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c57d2d71.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.2c43da24.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/5.44948c2f.js">
@@ -21,7 +21,7 @@
 			
 			<script>
 				{
-					__sveltekit_k3i1oc = {
+					__sveltekit_11ao2k9 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -31,8 +31,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.bb16690a.js"),
-						import("./_app/immutable/entry/app.e688a0d8.js")
+						import("./_app/immutable/entry/start.a2436281.js"),
+						import("./_app/immutable/entry/app.d123fcbe.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
