--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.faf00fd3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.ec026c86.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.cfc7374e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.2d75cc20.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e54661bb.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.d3ef4464.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.8bcc73fc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ef08732b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c57d2d71.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.d6a8f275.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.683bd604.js">
@@ -23,7 +23,7 @@
 			
 			<script>
 				{
-					__sveltekit_eib3rq = {
+					__sveltekit_13t4uzd = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -33,8 +33,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.ec026c86.js"),
-						import("./_app/immutable/entry/app.d3ef4464.js")
+						import("./_app/immutable/entry/start.cfc7374e.js"),
+						import("./_app/immutable/entry/app.ef08732b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
