--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.faf00fd3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.bbf931c7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.442aa4f4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.2d75cc20.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e0a99cdf.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.75cdc997.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.42d9e8be.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.0d229cec.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c57d2d71.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.d6a8f275.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.683bd604.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.720da87f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hr.292def8b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -23,18 +23,18 @@
 			
 			<script>
 				{
-					__sveltekit_22pl16 = {
+					__sveltekit_gw1l21 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
 
 					const element = document.currentScript.parentElement;
 
-					const data = [null,null];
+					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.bbf931c7.js"),
-						import("./_app/immutable/entry/app.75cdc997.js")
+						import("./_app/immutable/entry/start.442aa4f4.js"),
+						import("./_app/immutable/entry/app.0d229cec.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
