--- a/work.html
+++ b/work.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.faf00fd3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.442aa4f4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.883e0886.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.2d75cc20.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.42d9e8be.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.0d229cec.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5d48a330.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.754c73ba.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c57d2d71.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.d6a8f275.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/5.44948c2f.js">
@@ -21,7 +21,7 @@
 			
 			<script>
 				{
-					__sveltekit_gw1l21 = {
+					__sveltekit_1wt12t6 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -31,8 +31,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.442aa4f4.js"),
-						import("./_app/immutable/entry/app.0d229cec.js")
+						import("./_app/immutable/entry/start.883e0886.js"),
+						import("./_app/immutable/entry/app.754c73ba.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
