--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+		<link rel="stylesheet" href="/src/app.css" />
+		<link rel="assets%" href="/static/**" />
+
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
