--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,14 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.faf00fd3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.883e0886.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9d8f9fd8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.2d75cc20.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5d48a330.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.754c73ba.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.0e0d4293.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.349063c7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c57d2d71.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.d6a8f275.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.7c4b1dca.js">
@@ -20,7 +21,7 @@
 			
 			<script>
 				{
-					__sveltekit_1wt12t6 = {
+					__sveltekit_1mlqacb = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +31,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.883e0886.js"),
-						import("./_app/immutable/entry/app.754c73ba.js")
+						import("./_app/immutable/entry/start.9d8f9fd8.js"),
+						import("./_app/immutable/entry/app.349063c7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
