--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.faf00fd3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.db360ce1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.38882691.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.2d75cc20.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5ba35f3b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.6bd90cc5.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.a3ab3e2d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.646713b9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.a91c1d5f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.dcc81349.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c57d2d71.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.b59af26a.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.a6d4ce3d.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.eec21b4e.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.1607b265.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hr.292def8b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ti0jw5 = {
+					__sveltekit_nkrfsv = {
 						assets: "/world-wide-wendy",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -36,8 +36,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.db360ce1.js"),
-						import("./_app/immutable/entry/app.a3ab3e2d.js")
+						import("./_app/immutable/entry/start.38882691.js"),
+						import("./_app/immutable/entry/app.dcc81349.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
