--- a/work.html
+++ b/work.html
@@ -7,14 +7,14 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.faf00fd3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.ffc97572.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.bae61460.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.2d75cc20.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3599dee6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.8fad8788.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.aea473c9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c4c69f45.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.658d7757.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ae39e943.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c57d2d71.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.8075fc6e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.78ebaa44.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.cb00cf0e.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.287e4a2d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hr.292def8b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -23,7 +23,7 @@
 			
 			<script>
 				{
-					__sveltekit_77zcpg = {
+					__sveltekit_1ofg8zg = {
 						assets: "/world-wide-wendy",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -34,8 +34,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.ffc97572.js"),
-						import("./_app/immutable/entry/app.aea473c9.js")
+						import("./_app/immutable/entry/start.bae61460.js"),
+						import("./_app/immutable/entry/app.ae39e943.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
