--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.faf00fd3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.bae61460.js">
+		<link href="./_app/immutable/assets/0.523884b7.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9c43c6ba.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.2d75cc20.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c4c69f45.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.658d7757.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ae39e943.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.56e1b00e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.933b245b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.0bdbfeaa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c57d2d71.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.cb00cf0e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.258dff51.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.ea828fb0.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.497b4ab1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hr.292def8b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ofg8zg = {
+					__sveltekit_cjm39s = {
 						assets: "/world-wide-wendy",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -36,8 +36,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.bae61460.js"),
-						import("./_app/immutable/entry/app.ae39e943.js")
+						import("./_app/immutable/entry/start.9c43c6ba.js"),
+						import("./_app/immutable/entry/app.0bdbfeaa.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
