--- a/about.html
+++ b/about.html
@@ -6,14 +6,14 @@
 
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.523884b7.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.9c43c6ba.js">
+		<link href="./_app/immutable/assets/0.faf00fd3.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.bea5fc16.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.2d75cc20.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.56e1b00e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.933b245b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.0bdbfeaa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.0b4e3fcb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.c433f49c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.2dabd7a2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c57d2d71.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.ea828fb0.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.7fb7feca.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.39fb1599.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hr.292def8b.js">
 	</head>
@@ -53,7 +53,7 @@
 			
 			<script>
 				{
-					__sveltekit_cjm39s = {
+					__sveltekit_5qspo = {
 						assets: "/world-wide-wendy",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -64,8 +64,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.9c43c6ba.js"),
-						import("./_app/immutable/entry/app.0bdbfeaa.js")
+						import("./_app/immutable/entry/start.bea5fc16.js"),
+						import("./_app/immutable/entry/app.2dabd7a2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
