--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.faf00fd3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.bea5fc16.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.c09104f0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.2d75cc20.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.0b4e3fcb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.c433f49c.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.2dabd7a2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5c58bba9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.8ce85c87.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.325c412c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c57d2d71.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.7fb7feca.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.8d1a5e78.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.88d3f0db.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.3dd8cceb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hr.292def8b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_5qspo = {
+					__sveltekit_13yxjo8 = {
 						assets: "/world-wide-wendy",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -36,8 +36,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.bea5fc16.js"),
-						import("./_app/immutable/entry/app.2dabd7a2.js")
+						import("./_app/immutable/entry/start.c09104f0.js"),
+						import("./_app/immutable/entry/app.325c412c.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
