--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.faf00fd3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.c09104f0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.c97bb578.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.2d75cc20.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5c58bba9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.8ce85c87.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.325c412c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.cc88462e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.e5cc50c8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.760eb18c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c57d2d71.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.88d3f0db.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.3dd8cceb.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.1e931d07.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.4e522084.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hr.292def8b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_13yxjo8 = {
+					__sveltekit_1e4i9p3 = {
 						assets: "/world-wide-wendy",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -36,8 +36,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.c09104f0.js"),
-						import("./_app/immutable/entry/app.325c412c.js")
+						import("./_app/immutable/entry/start.c97bb578.js"),
+						import("./_app/immutable/entry/app.760eb18c.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
