--- a/work.html
+++ b/work.html
@@ -7,14 +7,14 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.faf00fd3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.2e128895.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.f41e9613.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.2d75cc20.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b75ea142.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.e46ac726.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.470b378b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.acd02778.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.0eef5b33.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.82175762.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c57d2d71.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.5f0bf5f0.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.a57f0060.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.3e757600.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.ce3db02c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hr.292def8b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -23,7 +23,7 @@
 			
 			<script>
 				{
-					__sveltekit_11kaxlg = {
+					__sveltekit_mxde39 = {
 						assets: "/world-wide-wendy",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -34,8 +34,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.2e128895.js"),
-						import("./_app/immutable/entry/app.470b378b.js")
+						import("./_app/immutable/entry/start.f41e9613.js"),
+						import("./_app/immutable/entry/app.82175762.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
