--- a/about.html
+++ b/about.html
@@ -7,18 +7,18 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.faf00fd3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.f41e9613.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.dadeaf31.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.2d75cc20.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.acd02778.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.0eef5b33.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.82175762.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.21509f62.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.75acaab9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.2567f2a9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c57d2d71.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.3e757600.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.5b99cd3d.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.39fb1599.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hr.292def8b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <section class="py-16"><div class="container max-w-screen-xl mx-auto px-4"><nav class="flex-wrap lg:flex items-center justify-between mb-10 xl:mb-28 border-b-4 border-midnight" data-svelte-h="svelte-6czoou"><div class="flex items-center mb-10 lg:mb-0"><img class="mr-4 w-[32] h-[32]" src="https://img.icons8.com/external-kmg-design-basic-outline-kmg-design/32/external-surfing-board-adventure-kmg-design-basic-outline-kmg-design.png" alt="external-surfing-board-adventure-kmg-design-basic-outline-kmg-design"> <h1><a href="/world-wide-wendy/">Wendy van Epen</a></h1></div> <ul class="lg:flex flex-col lg:flex-row lg:items-center lg:space-x-20 mb-10 xl:mb-0"><li class="nav-item"><a href="/world-wide-wendy/about">Get to know me</a></li> <li class="nav-item"><a href="/world-wide-wendy/work">Work</a></li> <li class="nav-item"><a href="/world-wide-wendy/contact">Let&#39;s get in touch</a></li></ul></nav> <div class="mx-auto w-4/5 flex flex-col sm:w-[90%]"><div class="w-2/3 p-8 sm:w-[100%]" data-svelte-h="svelte-11v7eb9"><div class="text-left"><img src="pictures/surfing.jpg" alt="Me surfing"></div></div> <div class="w-1/3 p-8 sm:w-max"><hr class="m-2 w-10 h-1 bg-aubergine"> <p class="font-medium text-aubergine text-xl" data-svelte-h="svelte-ka24kb">Skills in a nutshell</p> <hr class="m-2 w-10 h-1 bg-aubergine"> <div class="text-left" data-svelte-h="svelte-1g83jx0"><h3 class="font-bold text-aubergine-dark text-xl md:text-2xl xl:text-3xl mb-10"><ul><li>React.js</li> <li>TypeScript</li> <li>Next.js</li> <li>Surfing</li> <li>Snowboarding</li> <li>Traveling</li> <li>...having fun</li></ul></h3></div></div></div> <div class="mx-auto w-3/5"><p class="text-aubergine-dark font-medium md:text-md xl:text-lg mb-10" data-svelte-h="svelte-1xqadiw">From a young age, I was always interested in computers and the internet. I started building
+		<div style="display: contents">  <section class="py-16"><div class="container max-w-screen-xl mx-auto px-4"><nav class="flex-wrap lg:flex items-center justify-between mb-10 xl:mb-28 border-b-4 border-midnight" data-svelte-h="svelte-q0xae9"><div class="flex items-center mb-10 lg:mb-0"><img class="mr-4 w-[32] h-[32]" src="https://img.icons8.com/external-kmg-design-basic-outline-kmg-design/32/external-surfing-board-adventure-kmg-design-basic-outline-kmg-design.png" alt="external-surfing-board-adventure-kmg-design-basic-outline-kmg-design"> <h1><a href="/world-wide-wendy/">test - Wendy van Epen</a></h1></div> <ul class="lg:flex flex-col lg:flex-row lg:items-center lg:space-x-20 mb-10 xl:mb-0"><li class="nav-item"><a href="/world-wide-wendy/about">Get to know me</a></li> <li class="nav-item"><a href="/world-wide-wendy/work">Work</a></li> <li class="nav-item"><a href="/world-wide-wendy/contact">Let&#39;s get in touch</a></li></ul></nav> <div class="mx-auto w-4/5 flex flex-col sm:w-[90%]"><div class="w-2/3 p-8 sm:w-[100%]" data-svelte-h="svelte-11v7eb9"><div class="text-left"><img src="pictures/surfing.jpg" alt="Me surfing"></div></div> <div class="w-1/3 p-8 sm:w-max"><hr class="m-2 w-10 h-1 bg-aubergine"> <p class="font-medium text-aubergine text-xl" data-svelte-h="svelte-ka24kb">Skills in a nutshell</p> <hr class="m-2 w-10 h-1 bg-aubergine"> <div class="text-left" data-svelte-h="svelte-1g83jx0"><h3 class="font-bold text-aubergine-dark text-xl md:text-2xl xl:text-3xl mb-10"><ul><li>React.js</li> <li>TypeScript</li> <li>Next.js</li> <li>Surfing</li> <li>Snowboarding</li> <li>Traveling</li> <li>...having fun</li></ul></h3></div></div></div> <div class="mx-auto w-3/5"><p class="text-aubergine-dark font-medium md:text-md xl:text-lg mb-10" data-svelte-h="svelte-1xqadiw">From a young age, I was always interested in computers and the internet. I started building
 		websites when I was around 11 years old. I used to stay up late, focusing on the issues I would
 		encounter while building my dream websites. Up until today, I still experience the same focus
 		that makes me forget the hours and keep me glued to my screen. When I had to choose a study, I
@@ -53,7 +53,7 @@
 			
 			<script>
 				{
-					__sveltekit_mxde39 = {
+					__sveltekit_1w1a26t = {
 						assets: "/world-wide-wendy",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -64,8 +64,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.f41e9613.js"),
-						import("./_app/immutable/entry/app.82175762.js")
+						import("./_app/immutable/entry/start.dadeaf31.js"),
+						import("./_app/immutable/entry/app.2567f2a9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
