--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.faf00fd3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.f41e9613.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.dadeaf31.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.2d75cc20.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.acd02778.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.0eef5b33.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.82175762.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.21509f62.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.75acaab9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.2567f2a9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c57d2d71.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.3e757600.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.ee45dab8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.5b99cd3d.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.3c6bcbb8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hr.292def8b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <section class="py-16"><div class="container max-w-screen-xl mx-auto px-4"><nav class="flex-wrap lg:flex items-center justify-between mb-10 xl:mb-28 border-b-4 border-midnight" data-svelte-h="svelte-6czoou"><div class="flex items-center mb-10 lg:mb-0"><img class="mr-4 w-[32] h-[32]" src="https://img.icons8.com/external-kmg-design-basic-outline-kmg-design/32/external-surfing-board-adventure-kmg-design-basic-outline-kmg-design.png" alt="external-surfing-board-adventure-kmg-design-basic-outline-kmg-design"> <h1><a href="/world-wide-wendy/">Wendy van Epen</a></h1></div> <ul class="lg:flex flex-col lg:flex-row lg:items-center lg:space-x-20 mb-10 xl:mb-0"><li class="nav-item"><a href="/world-wide-wendy/about">Get to know me</a></li> <li class="nav-item"><a href="/world-wide-wendy/work">Work</a></li> <li class="nav-item"><a href="/world-wide-wendy/contact">Let&#39;s get in touch</a></li></ul></nav> <main><div class="flex flex-col lg:flex-row justify-center items-center lg:my-20"><div class="w-full lg:w-2/5 text-center lg:text-left mb-20 lg:mb-0"><div class="flex items-center justify-center lg:justify-start gap-2 mb-10"><hr class="m-2 w-10 h-1 bg-aubergine"> <h2 data-svelte-h="svelte-vqrw41">Nice to meet you, I&#39;m Wendy!</h2> <hr class="m-2 w-10 h-1 bg-aubergine"></div> <h2 class="font-bold leading-[3.5rem] text-aubergine-dark text-3xl md:text-4xl xl:text-5xl mb-10" data-svelte-h="svelte-1i480u5">Front-end developer <br>
+		<div style="display: contents">  <section class="py-16"><div class="container max-w-screen-xl mx-auto px-4"><nav class="flex-wrap lg:flex items-center justify-between mb-10 xl:mb-28 border-b-4 border-midnight" data-svelte-h="svelte-q0xae9"><div class="flex items-center mb-10 lg:mb-0"><img class="mr-4 w-[32] h-[32]" src="https://img.icons8.com/external-kmg-design-basic-outline-kmg-design/32/external-surfing-board-adventure-kmg-design-basic-outline-kmg-design.png" alt="external-surfing-board-adventure-kmg-design-basic-outline-kmg-design"> <h1><a href="/world-wide-wendy/">test - Wendy van Epen</a></h1></div> <ul class="lg:flex flex-col lg:flex-row lg:items-center lg:space-x-20 mb-10 xl:mb-0"><li class="nav-item"><a href="/world-wide-wendy/about">Get to know me</a></li> <li class="nav-item"><a href="/world-wide-wendy/work">Work</a></li> <li class="nav-item"><a href="/world-wide-wendy/contact">Let&#39;s get in touch</a></li></ul></nav> <main><div class="flex flex-col lg:flex-row justify-center items-center lg:my-20"><div class="w-full lg:w-2/5 text-center lg:text-left mb-20 lg:mb-0"><div class="flex items-center justify-center lg:justify-start gap-2 mb-10"><hr class="m-2 w-10 h-1 bg-aubergine"> <h2 data-svelte-h="svelte-vqrw41">Nice to meet you, I&#39;m Wendy!</h2> <hr class="m-2 w-10 h-1 bg-aubergine"></div> <h2 class="font-bold leading-[3.5rem] text-aubergine-dark text-3xl md:text-4xl xl:text-5xl mb-10" data-svelte-h="svelte-1i480u5">Front-end developer <br>
 				Sports enthusiast</h2> <p class="text-gray-500 text-sm md:text-md xl:text-lg mb-10" data-svelte-h="svelte-1jfe57f">From surfing the web to surfing waves, I love taking on a new challenge. I turned to
 				freelancing in september 2023 and I&#39;m here to help you build the accessible digital product
 				of your dreams.</p> <div class="space-y-5 lg:space-x-5 mb-10" data-svelte-h="svelte-2egsux"><a href="/world-wide-wendy/contact" class="block md:inline px-8 py-3 font-medium bg-midnight text-white text-lg rounded-md hover:bg-midnight-light hover:text-black hover:no-underline transition ease-in-out duration-300">Contact me</a></div> <hr class="text-gray-500 mb-5"> <span class="text-gray-500 text-sm" data-svelte-h="svelte-j71mti">Update september 2023: <b>not available for projects</b></span></div> <div class="w-1/3" data-svelte-h="svelte-uq46t1"><img class="w-4/5 ml-10" src="/world-wide-wendy/pictures/Wendy.png" alt="Nice to meet you! I'm Wendy"></div></div></main> <footer class="m-4" data-svelte-h="svelte-pz6vyy"><div class="w-full max-w-screen-xl mx-auto p-4 md:py-8"><div class="items-center mb-4 lg:flex lg:items-center lg:justify-between"><div><span class="self-center text-4xl font-groovyWendy whitespace-nowrap">World Wide Wendy<br></span> <span>Kvk: 91187850</span></div> <ul class="flex flex-wrap items-center mb-6 gap-4 space-around text-sm font-medium md:my-4 dark:text-gray-400"><li><a href="https://www.linkedin.com/in/wendy-van-epen-00bb9032/" class="hover:grayscale mr-4 md:mr-6"><img src="/world-wide-wendy/icons/linkedIn.svg" alt="linkedIn"></a></li> <li><a href="https://www.facebook.com/wendy.vanepen/" class="hover:grayscale mr-4 md:mr-6"><img src="/world-wide-wendy/icons/facebook.svg" alt="facebook"></a></li> <li><a href="https://www.instagram.com/wendyvanepen/" class="hover:grayscale mr-4 md:mr-6"><img src="/world-wide-wendy/icons/instagram.svg" alt="instagram"></a></li></ul></div> <hr class="mb-10 xl:m-8 border-b-4 border-midnight"> <div class="flex flex-col-reverse justify-between pt-1 pb-10 lg:flex-row"><p class="text-sm text-gray-600">© Wendy van Epen 2024</p> <ul class="flex flex-col mb-3 space-y-2 lg:mb-0 sm:space-y-0 sm:space-x-5 sm:flex-row"><li><a href="https://world-wide-wendy/icons8.com/" class="text-sm text-gray-600 transition-colors duration-300 hover:text-deep-purple-accent-400">Icons by Icons8</a></li> <li><a href="https://svelte.dev/" class="text-sm text-gray-600 transition-colors duration-300 hover:text-deep-purple-accent-400">Made with SvelteKit</a></li> <li><a href="https://tailwindcss.com/" class="text-sm text-gray-600 transition-colors duration-300 hover:text-deep-purple-accent-400">TailwindCSS</a></li></ul></div></div></footer></div></section> 
 			
 			<script>
 				{
-					__sveltekit_mxde39 = {
+					__sveltekit_1w1a26t = {
 						assets: "/world-wide-wendy",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -36,8 +36,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.f41e9613.js"),
-						import("./_app/immutable/entry/app.82175762.js")
+						import("./_app/immutable/entry/start.dadeaf31.js"),
+						import("./_app/immutable/entry/app.2567f2a9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
