--- a/work.html
+++ b/work.html
@@ -7,14 +7,14 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.faf00fd3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.dadeaf31.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9e2bb2a7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.2d75cc20.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.21509f62.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.75acaab9.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.2567f2a9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.19d00de2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.56958a3a.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.b7022090.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c57d2d71.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.5b99cd3d.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.b88685db.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.250285cf.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.43a401f1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hr.292def8b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -23,7 +23,7 @@
 			
 			<script>
 				{
-					__sveltekit_1w1a26t = {
+					__sveltekit_6pp5m9 = {
 						assets: "/world-wide-wendy",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -34,8 +34,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.dadeaf31.js"),
-						import("./_app/immutable/entry/app.2567f2a9.js")
+						import("./_app/immutable/entry/start.9e2bb2a7.js"),
+						import("./_app/immutable/entry/app.b7022090.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
