feat: styles headers, new servicews page

--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>Wendy van Epen - Freelance React/TypeScript/Next and accessibility developer</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 
